convert to jlink build
had to convert the installer to a Java 17 module and replace com.teamscale dependencies with Apache commons