@@ -4,11 +4,10 @@ import com.teamscale.profiler.installer.EnvironmentMap;
 import com.teamscale.profiler.installer.FatalInstallerError;
 import com.teamscale.profiler.installer.PermissionError;
 import com.teamscale.profiler.installer.TeamscaleCredentials;
-import org.conqat.lib.commons.system.SystemUtils;
+import org.apache.commons.lang3.SystemUtils;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.concurrent.TimeUnit;
@@ -31,7 +30,7 @@ public class InstallSystemdStep implements IStep {
 
 	@Override
 	public boolean shouldNotRun() {
-		return !SystemUtils.isLinux();
+		return !SystemUtils.IS_OS_LINUX;
 	}
 
 	@Override
@@ -55,12 +54,12 @@ public class InstallSystemdStep implements IStep {
 		if (Files.exists(systemdConfigFile)) {
 			throw new PermissionError(
 					"Cannot create systemd configuration file " + systemdConfigFile + " because it already exists." +
-							"\nPlease uninstall any old profiler versions first");
+					"\nPlease uninstall any old profiler versions first");
 		}
 
 		String content = "[Manager]\nDefaultEnvironment=" + environmentVariables.getSystemdString() + "\n";
 		try {
-			Files.write(systemdConfigFile, content.getBytes(StandardCharsets.UTF_8));
+			Files.writeString(systemdConfigFile, content);
 		} catch (IOException e) {
 			throw new PermissionError("Could not create " + systemdConfigFile, e);
 		}
@@ -92,10 +91,10 @@ public class InstallSystemdStep implements IStep {
 	}
 
 	private void askUserToManuallyReloadDaemon() {
-		System.err.println(
-				"Failed to reload the systemd daemon. Systemd services can only be profiled after reloading the daemon." +
-						"\nPlease manually reload the daemon with:" +
-						"\nsystemctl daemon-reload");
+		System.err.println("""
+				Failed to reload the systemd daemon. Systemd services can only be profiled after reloading the daemon.
+				Please manually reload the daemon with:
+				systemctl daemon-reload""");
 	}
 
 	private Path getSystemdEtcDirectory() {
@@ -122,7 +121,7 @@ public class InstallSystemdStep implements IStep {
 		} catch (IOException e) {
 			errorReporter.report(
 					new PermissionError("Failed to remove systemd config file " + systemdConfigFile + "." +
-							" Manually remove this file or systemd Java services may fail to start.", e));
+										" Manually remove this file or systemd Java services may fail to start.", e));
 		}
 
 		daemonReload();
